# dezlock-dump

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main.cpp  patterns.json  worker.cpp
docs/: auto-discovering-global-singletons.md  building-a-binary-analysis-viewer.md  building-msvc-x64-rtti-scanner.md  how-source2-schema-system-works.md  manual-dll-mapping-explained.md
src/: cli.cpp  cli.hpp  console.cpp  generate-internal-sdk.cpp  global-scanner.cpp  import-schema.cpp  interface-scanner.cpp  live-bridge.cpp  pattern-scanner.cpp  pattern-scanner.hpp  safe-memory.hpp  schema-manager.cpp  string-scanner.cpp  version-check.cpp  version-check.hpp  version.h.in
viewer/: index.html
viewer/src/: index.css
viewer/src/components/entity/: entity-inspector-field.tsx  entity-inspector-pane.tsx  entity-row.tsx
viewer/src/components/layout/: module-filter.tsx
viewer/src/components/live-renderers/: live-pointer.tsx
viewer/src/components/shared/: field-table.tsx  inline-class-expander.tsx
viewer/src/components/views/: class-view.tsx
viewer/src/context/: schema-context.tsx
viewer/src/lib/: format.ts
viewer/src/types/: schema.ts
